# fall

./: Dockerfile  Main.hs  README.md  stack.yaml  winter.cabal
Language/WebAssembly/: AST.hs  Operator.hs  Source.hs  Value.hs
Language/WebAssembly/Operator/: Float.hs  Generic.hs  Int.hs
Language/WebAssembly/Syntax/: AST.hs  Operator.hs  Source.hs  Type.hs
Language/WebAssembly/Syntax/Operator/: Float.hs  Generic.hs  Int.hs
Language/WebAssembly/Util/: Source.hs
app/: Main.hs
src/Language/WebAssembly/Binary/: Decode.hs  Encode.hs
src/Language/WebAssembly/Syntax/: AST.hs  Value.hs
src/Language/WebAssembly/Syntax/Operator/: Int.hs  Kind.hs
src/Language/WebAssembly/Util/: Source.hs
