name:          winter
version:       0.0.0
synopsis:      WebAssembly interpreter.
license:       GPL-3
copyright:     2018 DFINITY Stiftung
author:        Enzo Haussecker <enzo@dfinity.org>
maintainer:    Enzo Haussecker <enzo@dfinity.org>
stability:     Experimental
category:      Interpreter
homepage:      https://github.com/enzoh/winter
bug-reports:   https://github.com/enzoh/winter/issues
build-type:    Simple
cabal-version: >=1.10

library
   build-depends:
      base,
      bytestring,
      data-default-class
   default-extensions:
      DataKinds
      KindSignatures
      MultiWayIf
      RecordWildCards
      TypeFamilies
   default-language:
      Haskell2010
   exposed-modules:
      Language.WebAssembly.AST
      Language.WebAssembly.Operator
      Language.WebAssembly.Operator.Float
      Language.WebAssembly.Operator.Generic
      Language.WebAssembly.Operator.Int
      Language.WebAssembly.Source
      Language.WebAssembly.Type
      Language.WebAssembly.Value
   ghc-options:
      -O2
      -Wall

executable winter
   build-depends:
      base,
      bytestring,
      data-default-class
   default-extensions:
      DataKinds
      KindSignatures
      MultiWayIf
      RecordWildCards
      TypeFamilies
   default-language:
      Haskell2010
   ghc-options:
      -O2
      -Wall
   main-is:
      Main.hs
   other-modules:
      Language.WebAssembly.AST
      Language.WebAssembly.Operator
      Language.WebAssembly.Operator.Float
      Language.WebAssembly.Operator.Generic
      Language.WebAssembly.Operator.Int
      Language.WebAssembly.Source
      Language.WebAssembly.Type
      Language.WebAssembly.Value
