name:          winter
version:       0.0.0
synopsis:      WebAssembly interpreter.
license:       GPL-3
copyright:     2018 DFINITY Stiftung
author:        Enzo Haussecker <enzo@dfinity.org>
maintainer:    Enzo Haussecker <enzo@dfinity.org>
stability:     Experimental
category:      Interpreter
homepage:      https://github.com/enzoh/winter
bug-reports:   https://github.com/enzoh/winter/issues
build-type:    Simple
cabal-version: >=1.10

library
   build-depends:
      base,
      bytestring,
      data-default-class
   default-extensions:
      DataKinds
      KindSignatures
      LambdaCase
      MultiWayIf
      RecordWildCards
      TypeFamilies
   default-language:
      Haskell2010
   exposed-modules:
      Language.WebAssembly.Syntax.AST
      Language.WebAssembly.Syntax.Operator
      Language.WebAssembly.Syntax.Operator.Float
      Language.WebAssembly.Syntax.Operator.Generic
      Language.WebAssembly.Syntax.Operator.Int
      Language.WebAssembly.Syntax.Type
      Language.WebAssembly.Syntax.Value
      Language.WebAssembly.Util.Source
   ghc-options:
      -Wall
      -Werror

executable winter
   build-depends:
      base,
      bytestring,
      data-default-class
   default-extensions:
      DataKinds
      KindSignatures
      LambdaCase
      MultiWayIf
      RecordWildCards
      TypeFamilies
   default-language:
      Haskell2010
   ghc-options:
      -O2
      -Wall
      -Werror
   main-is:
      Main.hs
   other-modules:
      Language.WebAssembly.Syntax.AST
      Language.WebAssembly.Syntax.Operator
      Language.WebAssembly.Syntax.Operator.Float
      Language.WebAssembly.Syntax.Operator.Generic
      Language.WebAssembly.Syntax.Operator.Int
      Language.WebAssembly.Syntax.Type
      Language.WebAssembly.Syntax.Value
      Language.WebAssembly.Util.Source
