Name:          winter
Version:       0.0.0
Synopsis:      WebAssembly interpreter.
License:       GPL-3
Copyright:     2018 DFINITY Stiftung
Author:        Enzo Haussecker <enzo@dfinity.org>
Maintainer:    Enzo Haussecker <enzo@dfinity.org>
Stability:     Experimental
Category:      Interpreter
Homepage:      https://github.com/enzoh/winter
Bug-Reports:   https://github.com/enzoh/winter/issues
Build-Type:    Simple
Cabal-Version: >=1.10

Library
   Build-Depends:
      base,
      binary,
      bytestring,
      data-default-class
   Default-Extensions:
      DataKinds
      KindSignatures
      LambdaCase
      MultiWayIf
      RecordWildCards
      TypeFamilies
   Default-Language:
      Haskell2010
   Exposed-Modules:
      Language.WebAssembly.Binary.Decode
      Language.WebAssembly.Binary.Encode
      Language.WebAssembly.Syntax.AST
      Language.WebAssembly.Syntax.Operator
      Language.WebAssembly.Syntax.Operator.Float
      Language.WebAssembly.Syntax.Operator.Int
      Language.WebAssembly.Syntax.Operator.Kind
      Language.WebAssembly.Syntax.Type
      Language.WebAssembly.Syntax.Value
      Language.WebAssembly.Util.Source
   GHC-Options:
      -Wall
      -Werror
   HS-Source-Dirs:
      src

Executable winter
   Build-Depends:
      base,
      binary,
      bytestring,
      cmdargs,
      data-default-class,
      winter
   Default-Extensions:
      DeriveDataTypeable
      RecordWildCards
   Default-Language:
      Haskell2010
   GHC-Options:
      -O2
      -Wall
      -Werror
   HS-Source-Dirs:
      app
   Main-Is:
      Main.hs
